[gd_scene load_steps=3 format=3 uid="uid://dyb6t4vffx05"]

[ext_resource type="Script" path="res://Code/settings_menu.gd" id="1_m0fgx"]
[ext_resource type="Texture2D" uid="uid://cxgdib5vb3b17" path="res://Assets/cogwheel.png" id="2_b0xc2"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m0fgx")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.784314)

[node name="Settings" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Settings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 18.0
offset_top = 14.0
offset_right = -23.0
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Settings/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="Settings/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Label" type="Label" parent="Settings/MarginContainer/VBoxContainer/HBoxContainer3"]
texture_filter = 1
layout_mode = 2
text = "Vsync"

[node name="VSyncButton" type="CheckButton" parent="Settings/MarginContainer/VBoxContainer/HBoxContainer3"]
texture_filter = 1
layout_mode = 2

[node name="HBoxContainer5" type="HBoxContainer" parent="Settings/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Label" type="Label" parent="Settings/MarginContainer/VBoxContainer/HBoxContainer5"]
texture_filter = 1
layout_mode = 2
text = "Music volume :"

[node name="Label2" type="Label" parent="Settings/MarginContainer/VBoxContainer/HBoxContainer5"]
texture_filter = 1
custom_minimum_size = Vector2(30, 24)
layout_mode = 2
text = "100"

[node name="AVSl" type="HSlider" parent="Settings/MarginContainer/VBoxContainer/HBoxContainer5"]
texture_filter = 1
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
value = 100.0

[node name="HBoxContainer6" type="HBoxContainer" parent="Settings/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Settings/MarginContainer/VBoxContainer/HBoxContainer6"]
texture_filter = 1
layout_mode = 2
text = "Sound effect volume :"

[node name="Label2" type="Label" parent="Settings/MarginContainer/VBoxContainer/HBoxContainer6"]
texture_filter = 1
custom_minimum_size = Vector2(30, 24)
layout_mode = 2
text = "100"

[node name="AVSl2" type="HSlider" parent="Settings/MarginContainer/VBoxContainer/HBoxContainer6"]
texture_filter = 1
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
value = 100.0

[node name="ExitButton" type="TextureButton" parent="Settings"]
z_index = 2
texture_filter = 1
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -60.0
offset_bottom = 45.0
grow_horizontal = 0
texture_normal = ExtResource("2_b0xc2")

[connection signal="toggled" from="Settings/MarginContainer/VBoxContainer/HBoxContainer3/VSyncButton" to="." method="_on_v_sync_button_toggled"]
[connection signal="value_changed" from="Settings/MarginContainer/VBoxContainer/HBoxContainer5/AVSl" to="." method="_on_av_sl_value_changed"]
[connection signal="value_changed" from="Settings/MarginContainer/VBoxContainer/HBoxContainer6/AVSl2" to="." method="_on_av_sl_2_value_changed"]
[connection signal="pressed" from="Settings/ExitButton" to="." method="_on_exit_button_pressed"]
